[project]
name = "comfy-topaz"
description = "Comfy-Topaz is a custom node for ComfyUI, which integrates with Topaz Photo AI to enhance (upscale, sharpen, denoise, etc.) images, allowing this traditionally asynchronous step to become a part of ComfyUI workflows.\nNOTE: Requires licensed installation of Topaz Photo AI"
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/choey/Comfy-Topaz"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "choey"
DisplayName = "Comfy-Topaz"
Icon = ""
